--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "@clerk/nextjs": "^5.3.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@stripe/stripe-js": "^4.2.0",
+    "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "firebase": "^10.12.5",
+    "framer-motion": "^11.3.28",
+    "lucide-react": "^0.427.0",
     "next": "14.2.5",
+    "openai": "^4.55.7",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
