--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@stripe/stripe-js": "^4.2.0",
     "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.0",
