--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.3.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.21.0",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-icons": "^1.3.0",
@@ -28,6 +29,7 @@
     "openai": "^4.55.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.27.0",
     "stripe": "^16.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
