--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "embla-carousel-react": "^8.3.0",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
